--- a/index.html
+++ b/index.html
@@ -11,41 +11,43 @@
             <a href="#">Book Database</a>
         </nav>
         <div class="cards">
-            <section class="cards" id="formWrapper">
-                <div class="card">
-                    <h1> Form </h1>
-                    <form id="bookForm" class="cards" onsubmit="submitForm(event)">
-                        <div class="card" id="op-card">
-                            <h3> Action </h3>
-                            <select name="op" id="op">
-                                <option name="op" value="insert" selected>Insert</option>
-                                <option name="op" value="update">Update</option>
-                                <option name="op" value="delete">Delete</option>
-                            </select>
-                        </div>
-                        <div class="card" id="id-card">
-                            <h3> ID </h3>
-                            <input id="id" type="text" name="id" placeholder="id">
-                        </div>
-                        <div class="card" id="author-card">
-                            <h3> Author </h3>
-                            <input id="author" type="text" name="author" placeholder="author">
-                        </div>
-                        <div class="card" id="title-card">
-                            <h3> Title </h3>
-                            <input id="title" type="text" name="title" placeholder="title">
-                        </div>
-                        <div class="card" id="submit-card">
-                            <h3> Submit </h3>
-                            <input type="submit">
-                        </div>
-                    </form>
-                </div>
+            <section class="card">
+                <h1> About </h1>
+                <p>This is a book database manager using a <a href="https://www.forverkliga.se/JavaScript/api/crud.php">public API</a>.</p>
+            </section>
+            <section class="card">
+                <h1> Form </h1>
+                <form id="bookForm" class="card" onsubmit="submitForm(event)">
+                    <div class="row">
+                        <h3> Action </h3>
+                        <select name="op" id="op">
+                            <option name="op" value="insert" selected>Insert</option>
+                            <option name="op" value="update">Update</option>
+                            <option name="op" value="delete">Delete</option>
+                        </select>
+                    </div>
+                    <div class="row">
+                        <h3> ID </h3>
+                        <input id="id" type="text" name="id" placeholder="id">
+                    </div>
+                    <div class="row">
+                        <h3> Author </h3>
+                        <input id="author" type="text" name="author" placeholder="author">
+                    </div>
+                    <div class="row">
+                        <h3> Title </h3>
+                        <input id="title" type="text" name="title" placeholder="title">
+                    </div>
+                    <div class="row">
+                        <h3> Submit </h3>
+                        <input type="submit">
+                    </div>
+                </form>
             </section>
             <section class="cards">
                 <div class="card">
-                    <h1> Attempts </h1>
-                    <p id="attempts">0</p>
+                    <h1> Submission Attempts </h1>
+                    <p id="attempts"></p>
                 </div>
                 <div class="card">
                     <h1> Key </h1>
@@ -53,6 +55,7 @@
                     <button onclick="getKey(true)">Refresh</button>
                 </div>
             </section>
+        </div>
             <section class="cards">
                 <div class="card">
                     <h1> Books </h1>
@@ -61,7 +64,6 @@
                     </div>
                 </div>
             </section>
-        </div>
         <section class="cards">
             <div class="card">
                 Created by <a href="https://github.com/wilhelmberggren">Wilhelm Berggren</a>
@@ -70,6 +72,6 @@
                 <a href="https://github.com/wilhelmberggren/BookShop-SPA">Source</a>
             </div>
         </section>
+        <script src="app.js"></script>
     </body>
-    <script src="app.js"></script>
 </html>
