--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </section>
             <section class="card">
                 <h1> Form </h1>
-                <form id="bookForm" class="card" onsubmit="submitForm(event)">
+                <form id="bookForm" class="card">
                     <div class="row">
                         <h3> Action </h3>
                         <select name="op" id="op">
@@ -26,15 +26,15 @@
                             <option name="op" value="delete">Delete</option>
                         </select>
                     </div>
-                    <div class="row">
+                    <div class="row" id="id-row">
                         <h3> ID </h3>
                         <input id="id" type="text" name="id" placeholder="id">
                     </div>
-                    <div class="row">
+                    <div class="row" id="author-row">
                         <h3> Author </h3>
                         <input id="author" type="text" name="author" placeholder="author">
                     </div>
-                    <div class="row">
+                    <div class="row" id="title-row">
                         <h3> Title </h3>
                         <input id="title" type="text" name="title" placeholder="title">
                     </div>
