--- a/index.html
+++ b/index.html
@@ -11,38 +11,11 @@
             <a href="#">Book Database</a>
         </nav>
         <div class="cards">
-            <section class="card">
+            <!--section class="card">
                 <h1> About </h1>
                 <p>This is a book database manager using a <a href="https://www.forverkliga.se/JavaScript/api/crud.php">public API</a>.</p>
-            </section>
-            <section class="card">
-                <h1> Form </h1>
-                <form id="bookForm" class="card">
-                    <div class="row">
-                        <h3> Action </h3>
-                        <select name="op" id="op">
-                            <option value="insert" selected>Insert</option>
-                            <option value="update">Update</option>
-                            <option value="delete">Delete</option>
-                        </select>
-                    </div>
-                    <div class="row" id="id-row">
-                        <h3> ID </h3>
-                        <input id="id" type="text" name="id" placeholder="id">
-                    </div>
-                    <div class="row" id="author-row">
-                        <h3> Author </h3>
-                        <input id="author" type="text" name="author" placeholder="author">
-                    </div>
-                    <div class="row" id="title-row">
-                        <h3> Title </h3>
-                        <input id="title" type="text" name="title" placeholder="title">
-                    </div>
-                    <div class="row">
-                        <h3> Submit </h3>
-                        <input type="submit">
-                    </div>
-                </form>
+            </section-->
+            <section class="card" id="book-form-container">
             </section>
             <section class="cards">
                 <div class="card">
@@ -52,14 +25,13 @@
                 <div class="card">
                     <h1> Key </h1>
                     <p id="key">null</p>
-                    <button onclick="getKey(true)">Refresh</button>
+                    <!--button onclick="getKey(true)">Refresh</button-->
                 </div>
             </section>
         </div>
             <section class="cards">
                 <div class="card">
                     <h1> Books </h1>
-                    <button onclick="displayBooks()">Refresh</button>
                     <input type="text" id="filter" placeholder="filter">
                     <div class="cards" id="books">
                     </div>
@@ -73,6 +45,6 @@
                 <a href="https://github.com/wilhelmberggren/BookShop-SPA">Source</a>
             </div>
         </div>
-        <script src="app.js"></script>
+        <script src="app.js" type="module"></script>
     </body>
 </html>
