Fixed book view not updating on submit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="card">
                     <h1> Key </h1>
                     <p id="key">null</p>
-                    <!--button onclick="getKey(true)">Refresh</button-->
+                    <button id="refresh-key">Refresh</button>
                 </div>
             </section>
         </div>
@@ -33,6 +33,7 @@
                 <div class="card">
                     <h1> Books </h1>
                     <input type="text" id="filter" placeholder="filter">
+                    <button id="refresh-books">Refresh</button>
                     <div class="cards" id="books">
                     </div>
                 </div>
