Created LogBox, Key and ResourceManager

--- a/index.html
+++ b/index.html
@@ -10,34 +10,13 @@
         <nav>
             <a href="#">Book Database</a>
         </nav>
-        <div class="cards">
+        <div id="main" class="cards"></div>
             <!--section class="card">
                 <h1> About </h1>
                 <p>This is a book database manager using a <a href="https://www.forverkliga.se/JavaScript/api/crud.php">public API</a>.</p>
             </section-->
-            <section class="card" id="book-form-container">
-            </section>
-            <section class="cards">
-                <div class="card">
-                    <h1> Submission Attempts </h1>
-                    <p id="attempts"></p>
-                </div>
-                <div class="card">
-                    <h1> Key </h1>
-                    <p id="key">null</p>
-                    <button id="refresh-key">Refresh</button>
-                </div>
             </section>
         </div>
-            <section class="cards">
-                <div class="card">
-                    <h1> Books </h1>
-                    <input type="text" id="filter" placeholder="filter">
-                    <button id="refresh-books">Refresh</button>
-                    <div class="cards" id="books">
-                    </div>
-                </div>
-            </section>
         <div class="cards">
             <div class="card">
                 Created by <a href="https://github.com/wilhelmberggren">Wilhelm Berggren</a>
