--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Book Database</title>
         <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="cards">
-            <div class="cards">
-                <form id="book-form" class="card">
-                    <select name="op" id="op">
-                        <option value="insert" selected>Insert</option>
-                        <option value="update">Update</option>
-                        <option value="delete">Delete</option>
-                    </select>
-                    <input id="id" type="text" name="id" placeholder="id">
-                    <input id="title" type="text" name="title" placeholder="title">
-                    <input id="author" type="text" name="author" placeholder="author">
-                    <input type="submit" value="Submit">
-                </form>
-                <div class="card">
-                    <p id="key">null</p>
-                    <button id="get-key">Get new key</button>
-                </div>
-            </div>
-            <div class="card row" id="attempts"></div>
-            <div class="card row">
-                <input type="text" id="filter" placeholder="filter">
-                <button id="get-books">Get books</button>
-                <div class="cards" id="books"></div>
-            </div>
-        </div>
         <script src="app.js"></script>
+    </head>
+    <body class="cards">
+        <div class="card">
+            <h3>Form</h3>
+            <form id="book-form">
+                <select name="op" id="op">
+                    <option value="insert" selected>Insert</option>
+                    <option value="update">Update</option>
+                    <option value="delete">Delete</option>
+                </select>
+                <input id="id" type="text" name="id" placeholder="id">
+                <input id="title" type="text" name="title" placeholder="title">
+                <input id="author" type="text" name="author" placeholder="author">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div class="card">
+            <h3>Key</h3>
+            <p id="key">null</p>
+            <button id="get-key">Get new key</button>
+        </div>
+        <div class="card">
+            <h3>Attempts</h3>
+            <table id="attempts">
+                <tr><th>Attempts</th><th>Params</th></tr>
+            </table>
+        </div>
+        <div class="card">
+            <h3>Books</h3>
+            <input type="text" id="filter" placeholder="filter">
+            <button id="get-books">Get books</button>
+            <div class="cards" id="books"></div>
+        </div>
     </body>
 </html>
